@@ -360,6 +360,7 @@ static void Init
 	if (scaler == "bilinear") sclr = Image_window::bilinear;
 	else if (scaler == "interlaced") sclr = Image_window::interlaced;
 	else if (scaler == "point") sclr = Image_window::point;
+	else if (scaler == "SuperEagle") sclr = Image_window::SuperEagle;
 	else config->set("config/video/scale_method","2xSaI",true);
 
 	Image_window8::set_gamma(atof(gr.c_str()), atof(gg.c_str()), atof(gb.c_str()));	
@@ -941,6 +942,8 @@ void set_resolution (int new_res, bool save)
 				config->set("config/video/scale_method","bilinear",true);
 			else if (scaler == Image_window::interlaced)
 				config->set("config/video/scale_method","interlaced",true);
+			else if (scaler == Image_window::SuperEagle)
+				config->set("config/video/scale_method","SuperEagle",true);
 			else if (scaler == Image_window::point)
 				config->set("config/video/scale_method","point",true);
 			else
